snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/maven-metadata.xml.sha256
47c1435fe37b757bbb9754a03a4eb63e011453c635a28e91c6f3cfd1492e3609